tests/integrations/basic/tests/actual_tests/error_above.rs
use basic::add;

fn main() {
    //~v ERROR: mismatched types
    add("42", 3);
}
